artifacts/home-lab/stremio-server/manifests/apply.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stremio-server
  namespace: stremio
spec:
  selector:
    app: stremio-server
  ports:
    - name: http
      port: 11470
      targetPort: 11470

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stremio-server
  namespace: stremio
spec:
  serviceName: stremio-server
  replicas: 1
  selector:
    matchLabels:
      app: stremio-server
  template:
    metadata:
      labels:
        app: stremio-server
    spec:
      containers:
        - name: stremio-server
          image: stremio/server:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 11470

          volumeMounts:
            # Persistência do Stremio
            - name: stremio-data
              mountPath: /root/.stremio-server

            # Binários do host
            - name: ffmpeg
              mountPath: /bin/ffmpeg
              readOnly: true

            - name: ffprobe
              mountPath: /bin/ffprobe
              readOnly: true

          resources:
            requests:
              cpu: 100m
              memory: 89Mi
            limits:
              cpu: 100m
              memory: 89Mi

      volumes:
        - name: stremio-data
          persistentVolumeClaim:
            claimName: stremio-server-data-pvc

        - name: ffmpeg
          hostPath:
            path: /usr/bin/ffmpeg
            type: File

        - name: ffprobe
          hostPath:
            path: /usr/bin/ffprobe
            type: File

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio-server
  namespace: stremio
spec:
  ingressClassName: traefik
  rules:
    - host: stremio.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stremio-server
                port:
                  number: 11470
